Upgrading java version